--- a/web/src/locales/pl/home.json
+++ b/web/src/locales/pl/home.json
@@ -23,7 +23,7 @@
         "text": "Gdy podepniesz roślinę do definicji, Flovers może zaproponować interwały startowe na podstawie gatunku i Twoich warunków. Możesz je przyjąć, poprawić albo trzymać swój własny rytm."
       },
       "qr": {
-        "title": "Skan QR i od razu jesteś na ekranie rośliny",
+        "title": "Skanuj QR i od razu jesteś na ekranie rośliny",
         "text": "Wydrukuj kod QR dla rośliny i przyklej go do doniczki. Skanujesz aparatem i natychmiast otwierasz szczegóły rośliny. Najszybsza droga do sprawdzenia info i ogarnięcia pielęgnacji."
       },
       "iot": {
@@ -61,7 +61,7 @@
     }
   },
   "qr": {
-    "title": "Skan QR: fizyczny skrót",
+    "title": "Skaner QR: fizyczny skrót",
     "lead": "Wygeneruj kod QR dla każdej rośliny, wydrukuj go, przyklej do doniczki, a potem skanuj, żeby od razu przejść do szczegółów i zadań tej rośliny.",
     "image": {
       "alt": "Skanowanie kodu QR rośliny w aplikacji Flovers"
