Added translations ide spac kurwa

--- a/web/src/locales/en/home.json
+++ b/web/src/locales/en/home.json
@@ -9,6 +9,13 @@
     }
   },
 
+  "homeNew": {
+    "cta": {
+      "title": "Start simple. Keep the routine consistent.",
+      "subtitle": "Add your plants, link definitions for guidance, set recurring reminders, and let Flovers generate tasks automatically. Use daily notifications to stay on track, scan QR labels to jump straight to a plant, and optionally validate routines with live sensor readings."
+    }
+  },
+
   "featureGrid": {
     "header": {
       "title": "Features that keep care consistent",
