--- a/web/src/locales/pl/home.json
+++ b/web/src/locales/pl/home.json
@@ -9,6 +9,13 @@
     }
   },
 
+  "homeNew": {
+    "cta": {
+      "title": "Zacznij prosto. Trzymaj rutynę konsekwentnie.",
+      "subtitle": "Dodaj rośliny, podepnij definicje dla wskazówek, ustaw cykliczne przypomnienia i pozwól Flovers tworzyć zadania automatycznie. Korzystaj z codziennych powiadomień, skanuj etykiety QR, żeby wejść prosto w roślinę, i opcjonalnie weryfikuj rutyny odczytami z czujników."
+    }
+  },
+
   "featureGrid": {
     "header": {
       "title": "Funkcje, które utrzymują rutynę pielęgnacji",
