Added proper URL language handling to web

--- a/mobile/src/i18n/locales/en/register.json
+++ b/mobile/src/i18n/locales/en/register.json
@@ -17,7 +17,8 @@
       "incompleteForm": "Please complete the form.",
       "emailTaken": "This email is already taken.",
       "registrationFailed": "Registration failed. Please try again.",
-      "generic": "Something went wrong. Please try again."
+      "generic": "Something went wrong. Please try again.",
+      "cannotOpenLink": "Cannot open the link."
     },
     "success": {
       "accountCreated": "Account created. Welcome!"
