--- a/mobile/src/i18n/locales/pl/register.json
+++ b/mobile/src/i18n/locales/pl/register.json
@@ -17,7 +17,8 @@
       "incompleteForm": "Proszę uzupełnić formularz.",
       "emailTaken": "Ten adres e-mail jest już zajęty.",
       "registrationFailed": "Rejestracja nie powiodła się. Spróbuj ponownie.",
-      "generic": "Coś poszło nie tak. Spróbuj ponownie."
+      "generic": "Coś poszło nie tak. Spróbuj ponownie.",
+      "cannotOpenLink": "Nie można otworzyć linku."
     },
     "success": {
       "accountCreated": "Konto utworzone. Witamy!"
