Updated web page language dropdown translations to include all languages

--- a/web/src/locales/ar/common.json
+++ b/web/src/locales/ar/common.json
@@ -1,23 +1,33 @@
 {
   "nav": {
-    "start": "ابدأ",
-    "docs": "الوثائق",
+    "start": "الرئيسية",
+    "docs": "التوثيق",
     "schemas": "المخططات",
     "faq": "الأسئلة الشائعة"
   },
   "footer": {
     "terms": "الشروط",
     "privacy": "سياسة الخصوصية",
-    "contact": "اتصل"
+    "contact": "اتصال"
   },
   "a11y": {
     "mainNav": "التنقل الرئيسي",
     "languageSwitch": "اختيار اللغة",
-    "openMenu": "افتح القائمة",
-    "mobileMenu": "القائمة المتنقلة"
+    "openMenu": "فتح القائمة",
+    "mobileMenu": "قائمة الجوال"
   },
   "language": {
     "pl": "البولندية",
-    "en": "الإنجليزية"
+    "en": "الإنجليزية",
+    "de": "الألمانية",
+    "it": "الإيطالية",
+    "fr": "الفرنسية",
+    "es": "الإسبانية",
+    "pt": "البرتغالية",
+    "ar": "العربية",
+    "hi": "الهندية",
+    "zh": "الصينية",
+    "ja": "اليابانية",
+    "ko": "الكورية"
   }
 }
