--- a/web/src/locales/en/common.json
+++ b/web/src/locales/en/common.json
@@ -6,7 +6,7 @@
     "faq": "FAQ"
   },
   "footer": {
-    "terms": "Terms of Service",
+    "terms": "Terms",
     "privacy": "Privacy Policy",
     "contact": "Contact"
   },
@@ -18,6 +18,16 @@
   },
   "language": {
     "pl": "Polish",
-    "en": "English"
+    "en": "English",
+    "de": "German",
+    "it": "Italian",
+    "fr": "French",
+    "es": "Spanish",
+    "pt": "Portuguese",
+    "ar": "Arabic",
+    "hi": "Hindi",
+    "zh": "Chinese",
+    "ja": "Japanese",
+    "ko": "Korean"
   }
 }
