--- a/web/src/locales/es/common.json
+++ b/web/src/locales/es/common.json
@@ -18,6 +18,16 @@
   },
   "language": {
     "pl": "Polaco",
-    "en": "Inglés"
+    "en": "Inglés",
+    "de": "Alemán",
+    "it": "Italiano",
+    "fr": "Francés",
+    "es": "Español",
+    "pt": "Portugués",
+    "ar": "Árabe",
+    "hi": "Hindi",
+    "zh": "Chino",
+    "ja": "Japonés",
+    "ko": "Coreano"
   }
 }
