--- a/web/src/locales/hi/common.json
+++ b/web/src/locales/hi/common.json
@@ -1,12 +1,12 @@
 {
   "nav": {
-    "start": "शुरू करें",
+    "start": "मुखपृष्ठ",
     "docs": "दस्तावेज़",
-    "schemas": "स्कीमाएँ",
-    "faq": "अक्सर पूछे जाने वाले प्रश्न"
+    "schemas": "स्कीमा",
+    "faq": "FAQ"
   },
   "footer": {
-    "terms": "नियम और शर्तें",
+    "terms": "शर्तें",
     "privacy": "गोपनीयता नीति",
     "contact": "संपर्क"
   },
@@ -18,6 +18,16 @@
   },
   "language": {
     "pl": "पोलिश",
-    "en": "अंग्रेजी"
+    "en": "अंग्रेज़ी",
+    "de": "जर्मन",
+    "it": "इतालवी",
+    "fr": "फ़्रेंच",
+    "es": "स्पेनिश",
+    "pt": "पुर्तगाली",
+    "ar": "अरबी",
+    "hi": "हिंदी",
+    "zh": "चीनी",
+    "ja": "जापानी",
+    "ko": "कोरियाई"
   }
 }
