--- a/web/src/locales/ja/common.json
+++ b/web/src/locales/ja/common.json
@@ -1,7 +1,7 @@
 {
   "nav": {
-    "start": "スタート",
-    "docs": "ドキュメンテーション",
+    "start": "ホーム",
+    "docs": "ドキュメント",
     "schemas": "スキーマ",
     "faq": "FAQ"
   },
@@ -18,6 +18,16 @@
   },
   "language": {
     "pl": "ポーランド語",
-    "en": "英語"
+    "en": "英語",
+    "de": "ドイツ語",
+    "it": "イタリア語",
+    "fr": "フランス語",
+    "es": "スペイン語",
+    "pt": "ポルトガル語",
+    "ar": "アラビア語",
+    "hi": "ヒンディー語",
+    "zh": "中国語",
+    "ja": "日本語",
+    "ko": "韓国語"
   }
 }
