--- a/web/src/locales/pl/common.json
+++ b/web/src/locales/pl/common.json
@@ -18,6 +18,16 @@
   },
   "language": {
     "pl": "Polski",
-    "en": "Angielski"
+    "en": "Angielski",
+    "de": "Niemiecki",
+    "it": "Włoski",
+    "fr": "Francuski",
+    "es": "Hiszpański",
+    "pt": "Portugalski",
+    "ar": "Arabski",
+    "hi": "Hindi",
+    "zh": "Chiński",
+    "ja": "Japoński",
+    "ko": "Koreański"
   }
 }
