--- a/web/src/locales/pt/common.json
+++ b/web/src/locales/pt/common.json
@@ -6,9 +6,9 @@
     "faq": "FAQ"
   },
   "footer": {
-    "terms": "Termos e condições",
+    "terms": "Termos",
     "privacy": "Política de privacidade",
-    "contact": "Contacto"
+    "contact": "Contato"
   },
   "a11y": {
     "mainNav": "Navegação principal",
@@ -17,7 +17,17 @@
     "mobileMenu": "Menu móvel"
   },
   "language": {
-    "pl": "Polaco",
-    "en": "Inglês"
+    "pl": "Polonês",
+    "en": "Inglês",
+    "de": "Alemão",
+    "it": "Italiano",
+    "fr": "Francês",
+    "es": "Espanhol",
+    "pt": "Português",
+    "ar": "Árabe",
+    "hi": "Hindi",
+    "zh": "Chinês",
+    "ja": "Japonês",
+    "ko": "Coreano"
   }
 }
